Update version name and code. Change tests structure.