@@ -103,11 +103,6 @@ kotlin {
         androidMain.dependencies {
             implementation(libs.ktor.client.android)
         }
-        androidUnitTest.dependencies {
-            implementation(libs.junit4)
-            implementation(libs.mockito.kotlin)
-            implementation(libs.coroutines.test)
-        }
         iosMain.dependencies {
             implementation(libs.ktor.client.darwin)
         }
@@ -135,12 +130,6 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_17
         targetCompatibility = JavaVersion.VERSION_17
-    }
-
-    testOptions {
-        unitTests.all {
-            it.jvmArgs("-Dnet.bytebuddy.experimental=true")
-        }
     }
 }
 
